--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,96 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+    color:#f0f0f0;
+}
+
+body{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100vh;
+  background: #333333;
+}
+
+.App{
+  width:90vw;
+  height:90vh;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: space-between;
+  
+  align-items:flex-start;
+}
+.colorPicker{
+  width:400px;
+  height:100% !important;
+  background:#e0e0e0;
+  display:flex;
+  height:auto;
+  justify-content: space-between;
+}
+.colorPicker ul {
+  display:flex;
+  flex-wrap:wrap;
+  width:48%;
+  flex-direction:column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  padding-left:0.5em;
+}
+.colorPicker ul li{
+  list-style-type:none;
+  
+  
+  width:100%;
+}
+.colorPicker ul li label{
+  border:0.2em solid black;
+  padding:0.15em 0.25em;
+  box-sizing: border-box;
+  display:block;
+}
+.colorPicker ul li input{
+  display:none;
+}
+.colorPicker ul li input:checked ~ label{
+  font-weight:bold;
+}
+.colorPicker > div {
+  width:45%;
+  display: flex;
+  flex-direction: column;
+}
+.colorPicker > div .sketch-picker{
+  width:100% !important;
+  box-sizing: border-box !important;
+}
+
+.colorPicker > div > button {
+  margin-top:auto;
+  border:1px solid #000;
+  border-bottom:none;
+  border-right:none;
+  background:white;
+  font-weight:bold;
+  padding:1em 0.5em;
+}
+
+.colorPicker > div > input {
+  margin:0.5em 0;
+}
+
+
+
+.showJSON{
+  width:400px;
+  height:100% !important;
+  background:#e0e0e0;
+  display:flex;
+  height:auto;
+  justify-content: space-between;
+  flex-direction:column;
+}
+.showJSON textarea{
+  height:100%;
 }
